# rpc

./: .gitignore  README.md  docker-compose.yml
BaseStation/: .env  README.md  docker-compose.yml
BaseStation/GNB/: CMakeLists.txt  Dockerfile  README.md  announcer.sh  run-gnb.sh
BaseStation/GNB/config/: open5gs-gnb.yaml
BaseStation/GNB/src/gnb/ngap/: nas.cpp
BaseStation/UE/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  makefile  request_handler.py  run-ue.sh  send_message.sh
BaseStation/open5gs/docker/webui/: Dockerfile  curl.sh  entrypoint.sh
BaseStation/open5gs/docs/assets/webui/: mongo-init.js
BaseStation/open5gs/runtime-config/open5gs/: amf.yaml  ausf.yaml  bsf.yaml  hss.yaml  mme.yaml  nrf.yaml  nssf.yaml  pcf.yaml  pcrf.yaml  scp.yaml  sepp1.yaml  sepp2.yaml  sgwc.yaml  sgwu.yaml  smf.yaml  udm.yaml  udr.yaml  upf.yaml
portal/: Dockerfile
portal/app/: package.json
portal/app/config/: plugins.js
portal/app/data/: data.db
portal/app/src/api/article/content-types/article/: schema.json
portal/frontend/: middleware.js  next.config.js  package.json
portal/frontend/pages/: 403.js  admin.js  index.js
portal/frontend/pages/post/: [id].js
portal/frontend/public/: robots.txt
portal/frontend/styles/: globals.css
